idle states - bugfix